@@ -1,0 +1,4 @@
+try:
+    from numpy.oldnumeric.linear_algebra import *
+except ImportError:
+    from numpy.linalg.old import *
