@@ -1,0 +1,7 @@
+try:
+   from numpy.oldnumeric.mlab import *
+except ImportError:
+   from numpy.lib.mlab import *
+
+amin = min
+amax = max
